--- a/Eklakshya.css
+++ b/Eklakshya.css
@@ -38,5 +38,20 @@
             background-color:rgb(78,129,240); 
     }           
  
+    .btn{
+        margin-top: 10px;
+    }
 
+    .text-center{
+        text-align:center;
+    }
 
+       .p-2:hover{
+        transform:scale(1.3);
+        filter:brightness(70%);
+       }
+
+       
+       
+    
+    
